--- a/Contracts/RF1_2a_DunaDrillingOps.cfg
+++ b/Contracts/RF1_2a_DunaDrillingOps.cfg
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = DrillingTechValidated
         type = Expression
-        expression = @/mobileDrilling_template_proven
+	title = title
+        expression = $GLOBAL_mobileDrilling_template_proven
     }
     
     // Rewards
@@ -50,13 +51,7 @@ CONTRACT_TYPE
     
     targetBody = Duna
     
-    // Establish drilling rover reference
-    DATA
-    {
-        type = Vessel
-        dunaDriller = @DrillingRoverGroup/DrillingRoverVessel
-        requiredValue = false
-    }
+
     
     DATA
     {
