--- a/Contracts/RF1_2b_DunaSampleReturn.cfg
+++ b/Contracts/RF1_2b_DunaSampleReturn.cfg
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = SampleReturnValidated
         type = Expression
-        expression = @/sampleReturn_template_proven
+	title = title
+        expression = $GLOBAL_sampleReturn_template_proven
     }
     
     // Verify Duna science station exists from RF1.1a
@@ -47,7 +48,8 @@ CONTRACT_TYPE
     {
         name = DunaStationExists
         type = Expression
-        expression = @/dunaStation_scienceStationRole
+	title = title
+        expression = $GLOBAL_dunaStation_scienceStationRole  // ← Fixed: Use global variable
     }
     
     // Rewards
@@ -58,13 +60,6 @@ CONTRACT_TYPE
     
     targetBody = Duna
     
-    // Sample return vehicle reference
-    DATA
-    {
-        type = Vessel
-        dunaSampleReturn = @SampleReturnGroup/SampleReturnVessel
-        requiredValue = false
-    }
     
     // Deploy sample return vehicle - streamlined parameters
     PARAMETER
@@ -105,14 +100,40 @@ CONTRACT_TYPE
     }
     
     // Dock with existing science station
+PARAMETER
+{
+    name = DockWithScienceStation
+    type = VesselParameterGroup
+    title = Dock with Duna Science Station
+    notes = Dock with your existing science station in Duna orbit for sample analysis
+    
     PARAMETER
     {
-        name = DockWithStation
-        type = Docking
-        vessel = @/dunaStation
-        title = Dock with Duna Science Station
-        notes = Deliver samples to the orbital laboratory for analysis.
+        name = InDunaOrbit
+        type = Orbit
+        targetBody = Duna
+        minAltitude = 50000
+        maxAltitude = 1000000
     }
+    
+    PARAMETER
+    {
+        name = HasDockedConfiguration
+        type = PartValidation
+        partModule = ModuleDockingNode
+        minCount = 2
+        title = Multiple docking ports (indicates successful docking)
+    }
+    
+    PARAMETER
+    {
+        name = HasLabAccess
+        type = PartValidation
+        partModule = ModuleScienceLab
+        minCount = 1
+        title = Science laboratory capability confirmed
+    }
+}
     
     // Process samples in orbital laboratory
     PARAMETER
