--- a/Contracts/RF1_2c_IkeEnhancedISRU.cfg
+++ b/Contracts/RF1_2c_IkeEnhancedISRU.cfg
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = AdvancedISRUValidated
         type = Expression
-        expression = @/advancedISRU_template_proven
+	title = title
+        expression = $GLOBAL_advancedISRU_template_proven
     }
     
     // Verify existing Ike facility from RF1.1d
@@ -47,7 +48,8 @@ CONTRACT_TYPE
     {
         name = IkeResourceExists
         type = Expression
-        expression = @/ikeResourceFacility_resourceProductionRole
+	title = title
+        expression = $GLOBAL_ikeResourceFacility_resourceProductionRole
     }
     
     // Rewards
@@ -62,7 +64,8 @@ CONTRACT_TYPE
     DATA
     {
         type = Vessel
-        ikeEnhancedFacility = @EnhancedFacilityGroup/EnhancedFacilityVessel
+	title = title
+        expression = $GLOBAL_EnhancedFacilityGroup/EnhancedFacilityVessel
         requiredValue = false
     }
     
