--- a/Contracts/RF1_3a_IkePermanentHabitat.cfg
+++ b/Contracts/RF1_3a_IkePermanentHabitat.cfg
@@ -39,14 +39,16 @@ CONTRACT_TYPE
     {
         name = HabitatValidated
         type = Expression
-        expression = @/permanentHabitat_template_proven
+	title = title
+        expression = $GLOBAL_permanentHabitat_template_proven
     }
     
     REQUIREMENT
     {
         name = NuclearStageValidated
         type = Expression
-        expression = @/reusableTransferStage_template_proven
+	title = title
+        expression = $GLOBAL_reusableTransferStage_template_proven
     }
     
     // Verify existing Ike resource facility
@@ -54,7 +56,8 @@ CONTRACT_TYPE
     {
         name = IkeResourceExists
         type = Expression
-        expression = @/ikeResourceFacility_resourceProductionRole
+	title = title
+        expression = $GLOBAL_ikeResourceFacility_resourceProductionRole
     }
     
     // Rewards
@@ -69,14 +72,16 @@ CONTRACT_TYPE
     DATA
     {
         type = Vessel
-        ikeResearchBase = @ResearchBaseGroup/ResearchBaseVessel
+	title = title
+        expression = $GLOBAL_ResearchBaseGroup/ResearchBaseVessel
         requiredValue = false
     }
     
     DATA
     {
         type = Vessel
-        ikeNuclearStage = @NuclearTransportGroup/NuclearStageVessel
+	title = title
+        expression = $GLOBAL_NuclearTransportGroup/NuclearStageVessel
         requiredValue = false
     }
     
