--- a/Contracts/RF1_3b_IkeSurfaceOps.cfg
+++ b/Contracts/RF1_3b_IkeSurfaceOps.cfg
@@ -39,14 +39,16 @@ CONTRACT_TYPE
     {
         name = RoverValidated
         type = Expression
-        expression = @/advancedRover_template_proven
+	title = title
+        expression = $GLOBAL_advancedRover_template_proven
     }
     
     REQUIREMENT
     {
         name = NuclearStageValidated
         type = Expression
-        expression = @/reusableTransferStage_template_proven
+	title = title
+        expression = $GLOBAL_reusableTransferStage_template_proven
     }
     
     // Verify Ike research base exists
@@ -54,7 +56,8 @@ CONTRACT_TYPE
     {
         name = IkeResearchBaseExists
         type = Expression
-        expression = @/ikeResearchBase_permanentHabitatRole
+	title = title
+        expression = $GLOBAL_ikeResearchBase_permanentHabitatRole
     }
     
     // Rewards
@@ -69,7 +72,8 @@ CONTRACT_TYPE
     DATA
     {
         type = Vessel
-        ikeAdvancedRover = @AdvancedRoverGroup/AdvancedRoverVessel
+	title = title
+        expression = $GLOBAL_AdvancedRoverGroup/AdvancedRoverVessel
         requiredValue = false
     }
     
