--- a/Contracts/RF1_3c_DunaSystemTransfer.cfg
+++ b/Contracts/RF1_3c_DunaSystemTransfer.cfg
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = KEVValidated
         type = Expression
-        expression = @/KEV_template_proven
+	title = title
+        expression = $GLOBAL_KEV_template_proven
     }
     
     // Verify Duna infrastructure exists
@@ -47,14 +48,16 @@ CONTRACT_TYPE
     {
         name = DunaStationExists
         type = Expression
-        expression = @/dunaStation_scienceStationRole
+	title = title
+        expression = $GLOBAL_dunaStation_scienceStationRole
     }
     
     REQUIREMENT
     {
         name = IkeResearchBaseExists
         type = Expression
-        expression = @/ikeResearchBase_permanentHabitatRole
+	title = title
+        expression = $GLOBAL_ikeResearchBase_permanentHabitatRole
     }
     
     // Rewards
@@ -65,13 +68,6 @@ CONTRACT_TYPE
     
     targetBody = Duna
     
-    // Establish KEV reference for future missions
-    DATA
-    {
-        type = Vessel
-        dunaKEV = @KEVDeploymentGroup/KEVVessel
-        requiredValue = false
-    }
     
     DATA
     {
@@ -134,32 +130,67 @@ CONTRACT_TYPE
             title = Efficient propulsion system
         }
     }
-    
-    // Demonstrate station docking
+   
+// Demonstrate station docking
     PARAMETER
     {
-        name = StationDocking
-        type = Docking
-        vessel = @/dunaStation
-        title = Dock with Duna Science Station
-        notes = Demonstrate KEV compatibility with existing orbital infrastructure.
+	    name = StationDocking
+	    type = VesselParameterGroup
+	    title = Dock with Duna Science Station
+	    notes = Demonstrate KEV compatibility with existing orbital infrastructure
+    
+        PARAMETER
+        {
+            name = InDunaOrbit
+            type = Orbit
+            targetBody = Duna
+            minAltitude = 50000
+            maxAltitude = 1000000
+        }
+    
+        PARAMETER
+        {
+            name = ProveDocking
+            type = PartValidation
+            partModule = ModuleDockingNode
+            minCount = 2
+            title = Multiple docking ports (indicates successful docking)
+        }
+    
+        PARAMETER
+        {
+            name = StationPresent
+            type = PartValidation
+            partModule = ModuleScienceLab
+            minCount = 1
+            title = Confirm science station capability
+        }
     }
     
-    // Demonstrate crew transfer capability to Ike system
+// Demonstrate crew transfer capability to Ike system
     PARAMETER
     {
         name = CrewTransferDemo
         type = VesselParameterGroup
         title = Crew Transfer to Ike System
-        vessel = @/dunaKEV
+        notes = Use your KEV to demonstrate crew transport between Duna and Ike systems
         
         PARAMETER
         {
             name = IkeOrbit
             type = Orbit
             targetBody = Ike
+	    minAltitude = 10000
+	    maxAltitude = 100000 
             title = Transfer crew to Ike orbit
         }
+	PARAMETER
+	{
+            name = HasCrew
+	     type = HasCrew
+	     minCrew = 3
+	    title = Crew aboard for transport
+	}
         
         PARAMETER
         {
@@ -175,6 +206,8 @@ CONTRACT_TYPE
             name = ReturnToDuna
             type = Orbit
             targetBody = Duna
+	    minAltitude = 100000
+	    maxAltitude = 500000 
             title = Return to Duna orbit
             notes = Complete crew transport mission cycle.
         }
