--- a/Contracts/RF1_4a_CrewRotationReturn.cfg
+++ b/Contracts/RF1_4a_CrewRotationReturn.cfg
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = GatewayValidated
         type = Expression
-        expression = @/orbitalLogisticsHub_template_proven
+	title = title
+        expression = $GLOBAL_orbitalLogisticsHub_template_proven
     }
     
     // Verify KEV technology and existing deployment
@@ -47,14 +48,16 @@ CONTRACT_TYPE
     {
         name = KEVValidated
         type = Expression
-        expression = @/KEV_template_proven
+	title = title
+        expression = $GLOBAL_KEV_template_proven
     }
     
     REQUIREMENT
     {
         name = DunaKEVExists
         type = Expression
-        expression = @/dunaKEV_crewTransportRole
+	title = title
+        expression = $GLOBAL_dunaKEV_crewTransportRole
     }
     
     // Verify Ike research base exists
@@ -62,7 +65,8 @@ CONTRACT_TYPE
     {
         name = IkeResearchBaseExists
         type = Expression
-        expression = @/ikeResearchBase_permanentHabitatRole
+	title = title
+        expression = $GLOBAL_ikeResearchBase_permanentHabitatRole
     }
     
     // Rewards
@@ -79,15 +83,33 @@ CONTRACT_TYPE
         name = GatewayStaging
         type = VesselParameterGroup
         title = Gateway Station Logistics Operations
-        vessel = @/kerbinGateway
+        notes = Return crews to Gateway for debriefing and medical evaluation
         
+        PARAMETER
+        {
+            name = AtKerbin
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 2000000
+            maxAltitude = 5000000
+            title = At Gateway Station orbit
+        }
+
+        PARAMETER
+        {
+            name = ProveDocking
+            type = PartValidation
+            partModule = ModuleDockingNode
+            minCount = 2
+            title = Multiple docking ports (indicates successful docking)
+        }
+
         PARAMETER
         {
             name = CrewPreparation
             type = HasCrew
             minCrew = 6
             title = Stage fresh crew at Gateway Station
-            notes = Fresh crew complement prepared for rotation deployment.
         }
         
         PARAMETER
@@ -106,7 +128,6 @@ CONTRACT_TYPE
         name = CrewReturn
         type = VesselParameterGroup
         title = Return Long-Deployed Crews
-        vessel = @/dunaKEV
         
         PARAMETER
         {
@@ -121,7 +142,6 @@ CONTRACT_TYPE
         {
             name = ReturnToGateway
             type = Docking
-            vessel = @/kerbinGateway
             title = Dock with Gateway Station
             notes = Return crews to Gateway for debriefing and medical evaluation.
         }
@@ -133,13 +153,14 @@ CONTRACT_TYPE
         name = FreshCrewDeployment
         type = VesselParameterGroup
         title = Deploy Fresh Crew Rotation
-        vessel = @/dunaKEV
         
         PARAMETER
         {
             name = DeployToIke
             type = Orbit
             targetBody = Ike
+	    minAltitude = 10000
+	    maxAltitude = 50000
             title = Transport fresh crew to Ike system
             notes = Deploy replacement personnel using KEV transport capability.
         }
@@ -160,7 +181,8 @@ CONTRACT_TYPE
         name = SustainedOperations
         type = Orbit
         targetBody = Duna
-        vessel = @/dunaKEV
+	minAltitude = 100000
+	maxAltitude = 500000 
         title = Return KEV to Duna orbit
         notes = Complete crew rotation cycle, KEV ready for continued operations.
     }
