--- a/Contracts/RF1_4b_InfrastructureRepurposing.cfg
+++ b/Contracts/RF1_4b_InfrastructureRepurposing.cfg
@@ -39,14 +39,16 @@ CONTRACT_TYPE
     {
         name = IkeResourceExists
         type = Expression
-        expression = @/ikeResourceFacility_resourceProductionRole
+ 	title = title
+        expression = $GLOBAL_ikeResourceFacility_resourceProductionRole
     }
     
     REQUIREMENT
     {
         name = NuclearStageExists
         type = Expression
-        expression = @/reusableTransferStage_template_proven
+	title = title
+        expression = $GLOBAL_reusableTransferStage_template_proven
     }
     
     // Rewards
