--- a/Contracts/RF1_4c_DunaSurfaceBase.cfg
+++ b/Contracts/RF1_4c_DunaSurfaceBase.cfg
@@ -39,21 +39,24 @@ CONTRACT_TYPE
     {
         name = SuperheavyValidated
         type = Expression
-        expression = @/superheavyLaunch_template_proven
+	title = title
+        expression = $GLOBAL_superheavyLaunch_template_proven
     }
     
     REQUIREMENT
     {
         name = PrecisionEntryValidated
         type = Expression
-        expression = @/precisionEntry_template_proven
+	title = title
+        expression = $GLOBAL_precisionEntry_template_proven
     }
     
     REQUIREMENT
     {
         name = GatewayValidated
         type = Expression
-        expression = @/orbitalLogisticsHub_template_proven
+	title = title
+        expression = $GLOBAL_orbitalLogisticsHub_template_proven
     }
     
     // Verify existing Duna infrastructure
@@ -61,14 +64,16 @@ CONTRACT_TYPE
     {
         name = DunaStationExists
         type = Expression
-        expression = @/dunaStation_scienceStationRole
+	title = title
+        expression = $GLOBAL_dunaStation_scienceStationRole
     }
     
     REQUIREMENT
     {
         name = DunaCommHubExists
         type = Expression
-        expression = @/dunaCommHub_communicationsRole
+	title = title
+        expression = $GLOBAL_dunaCommHub_communicationsRole
     }
     
     // Rewards - major Phase 1 completion mission
@@ -80,12 +85,7 @@ CONTRACT_TYPE
     targetBody = Duna
     
     // Establish Duna Base reference for future campaigns
-    DATA
-    {
-        type = Vessel
-        dunaBase = @DunaSurfaceBaseGroup/DunaBaseVessel
-        requiredValue = false
-    }
+
     
     DATA
     {
@@ -100,7 +100,6 @@ CONTRACT_TYPE
         name = GatewayStagingOps
         type = VesselParameterGroup
         title = Gateway Station Staging Operations
-        vessel = @/kerbinGateway
         
         PARAMETER
         {
@@ -116,7 +115,7 @@ CONTRACT_TYPE
             name = MissionCoordination
             type = Timer
             duration = 5d
-            title = Mission coordination - 5 days
+            title = Mission coordination 5 days
             notes = Coordinate complex multi-stage deployment operations.
         }
     }
@@ -135,6 +134,8 @@ CONTRACT_TYPE
             name = DunaTransfer
             type = Orbit
             targetBody = Duna
+	    minAltitude = 100000
+	    maxAltitude = 500000 
             title = Transport base modules to Duna
         }
         
