--- a/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
+++ b/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -43,13 +43,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-    // Surface Probe Role template establishment
-    DATA
-    {
-        type = bool
-        surfaceProbe_template_proven = true
-        persist = true
-    }
+
     
     // Objectives - Land probes at specific coordinates in different biomes
     PARAMETER
@@ -208,15 +202,4 @@ CONTRACT_TYPE
         }
     }
     
-    PARAMETER
-    {
-        name = SurvivalTest
-        type = Timer
-        parameter = ProbeGrasslands
-        parameter = ProbeDeserts
-        parameter = ProbeTundra
-        duration = 10d
-        title = Demonstrate extended operations for 10 days
-        notes = All probes must survive and maintain communication for the full duration.
-    }
 }
