--- a/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
+++ b/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -51,13 +51,7 @@ CONTRACT_TYPE
         persist = true
     }
     
-    // Track booster for reuse
-    DATA
-    {
-        type = Vessel
-        reusableBooster = @boosterRecovery/boosterVessel
-        requiredValue = false
-    }
+
     
     // Objectives - Initial launch and booster recovery
     PARAMETER
@@ -116,71 +110,7 @@ CONTRACT_TYPE
             minQuantity = 10.0
         }
         
-        PARAMETER
-        {
-            name = BoosterIntact
-            type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
-        }
+
     }
     
-    PARAMETER
-    {
-        name = RapidTurnaround
-        type = Timer
-        parameter = BoosterRecovery
-        duration = 50d
-        title = Refurbishment Period - Maximum 50 days
-        notes = Refurbish booster and prepare for relaunch within 50 days.
-    }
-    
-    PARAMETER
-    {
-        name = RelaunchMission
-        type = VesselParameterGroup
-        title = Relaunch Mission - Same Booster, New Payload
-        vessel = @/reusableBooster
-        
-        PARAMETER
-        {
-            name = RelaunchOrbit
-            type = Orbit
-            targetBody = Kerbin
-            minAltitude = 100000
-            maxAltitude = 150000
-        }
-        
-        PARAMETER
-        {
-            name = HasNewPayload
-            type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
-        }
-    }
-    
-    PARAMETER
-    {
-        name = SecondRecovery
-        type = VesselParameterGroup
-        title = Second Recovery - Prove Repeatability
-        vessel = @/reusableBooster
-        
-        PARAMETER
-        {
-            name = SecondLanding
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-        }
-        
-        PARAMETER
-        {
-            name = StillIntact
-            type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
-        }
-    }
 }
