--- a/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
+++ b/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -52,7 +52,13 @@ CONTRACT_TYPE
     }
     
     // Objectives - Deploy and test ISRU facility
-    PARAMETER
+PARAMETER
+{
+    name = ISRUServiceMission
+    type = Sequence
+    title = Demonstrate Complete ISRU Service Cycle   
+
+ PARAMETER
     {
         name = ResourceFacilityDeployment
         type = VesselParameterGroup
@@ -73,7 +79,7 @@ CONTRACT_TYPE
             name = HasDrill
             type = PartValidation
             partModule = ModuleResourceHarvester
-            minCount = 2
+            minCount = 1
         }
         
         PARAMETER
@@ -81,31 +87,25 @@ CONTRACT_TYPE
             name = HasConverter
             type = PartValidation
             partModule = ModuleResourceConverter
-            minCount = 2
+            minCount = 1
         }
+
+        PARAMETER
+	{
+	    name = EmptyOreTanks
+	    type = HasResource
+	    resource = Ore
+	    maxQuantity = 5.0
+	    title = Land with empty ore tanks
+	  //  notes = Demonstrates that ore must be mined locally rather than transported from Kerbin.
+	}
         
         PARAMETER
         {
             name = HasOreStorage
             type = HasResourceCapacity
             resource = Ore
-            minQuantity = 500.0
-        }
-        
-        PARAMETER
-        {
-            name = HasFuelStorage
-            type = HasResourceCapacity
-            resource = LiquidFuel
-            minQuantity = 400.0
-        }
-        
-        PARAMETER
-        {
-            name = HasOxidizerStorage
-            type = HasResourceCapacity
-            resource = Oxidizer
-            minQuantity = 400.0
+            minQuantity = 600.0
         }
         
         PARAMETER
@@ -113,31 +113,44 @@ CONTRACT_TYPE
             name = HasPowerGeneration
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
-            minCount = 4
+            minCount = 2
         }
     }
     
     PARAMETER
     {
-        name = FuelProduction
-        type = HasResource
-        vessel = Minmus ISRU Facility
-        resource = LiquidFuel
-        minQuantity = 200.0
-        title = Produce 200 units of Liquid Fuel
-        notes = Demonstrate successful fuel production from local ore extraction.
+        name = OrbitWithFuel
+        type = VesselParameterGroup
+        title = Return to Orbit with Processed Fuel
+
+        
+        PARAMETER
+        {
+            name = MinmusOrbit
+            type = Orbit
+            targetBody = Minmus
+            minAltitude = 10000
+            maxAltitude = 100000
+        }
+        
+        PARAMETER
+        {
+            name = HasOreStorage
+            type = HasResource
+            resource = Ore
+            minQuantity = 600.0
+        }
+        
+        PARAMETER
+        {
+            name = HasDockingCapability
+            type = PartValidation
+            partModule = ModuleDockingNode
+            minCount = 1
+            title = Docking capability for fuel transfer
+        }
     }
     
-    PARAMETER
-    {
-        name = OxidizerProduction
-        type = HasResource
-        vessel = Minmus ISRU Facility
-        resource = Oxidizer
-        minQuantity = 200.0
-        title = Produce 200 units of Oxidizer
-        notes = Demonstrate complete propellant production capability.
-    }
     
     PARAMETER
     {
@@ -151,34 +164,17 @@ CONTRACT_TYPE
         {
             name = DockWithISRU
             type = Docking
-            vessel = Minmus ISRU Facility
+            defineDockedVessel = Minmus ISRU Facility
         }
         
-        PARAMETER
-        {
-            name = ReceiveFuel
-            type = HasResource
-            resource = LiquidFuel
-            minQuantity = 100.0
-            title = Receive 100 units of fuel from facility
-        }
         
         PARAMETER
         {
             name = HasDockingPort
             type = PartValidation
             partModule = ModuleDockingNode
-            minCount = 1
+            minCount = 3
         }
     }
     
-    PARAMETER
-    {
-        name = AutonomousOperations
-        type = Timer
-        parameter = ResourceFacilityDeployment
-        duration = 15d
-        title = Autonomous Operations Test - 15 days
-        notes = Facility must operate autonomously, demonstrating reliability for interplanetary deployment.
-    }
 }
