--- a/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
+++ b/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -31,7 +31,8 @@ CONTRACT_TYPE
     {
         name = RF1_1_Complete
         type = Expression
-        expression = @/rf1_1_allcomplete
+	title = title
+        expression = $GLOBAL_rf1_1_allcomplete
     }
     
     // Rewards - pathfinder level
@@ -43,13 +44,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-    // Mobile Drilling Role template establishment
-    DATA
-    {
-        type = bool
-        mobileDrilling_template_proven = true
-        persist = true
-    }
+
     
     // Objectives - Test deep drilling systems
     PARAMETER
@@ -138,7 +133,6 @@ CONTRACT_TYPE
         name = MobilityTest
         type = VesselParameterGroup
         title = Mobility and Drilling Integration Test
-        vessel = Kerbin Drilling Rover
         
         PARAMETER
         {
