--- a/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
+++ b/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = DrillingTechValidated
         type = Expression
-        expression = @/mobileDrilling_template_proven
+	title = title
+        expression = $GLOBAL_mobileDrilling_template_proven
     }
     
     // Rewards - pathfinder level
@@ -51,14 +52,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Mun
     
-    // Sample Return Role template establishment
-    DATA
-    {
-        type = bool
-        sampleReturn_template_proven = true
-        persist = true
-    }
-    
+
     // Objectives - Prove sample return operations
     PARAMETER
     {
