--- a/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
+++ b/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = SampleReturnValidated
         type = Expression
-        expression = @/sampleReturn_template_proven
+	title = title
+        expression = $GLOBAL_sampleReturn_template_proven
     }
     
     // Verify original Minmus facility exists from RFP1.1e
@@ -47,7 +48,8 @@ CONTRACT_TYPE
     {
         name = MinmusISRUExists
         type = Expression
-        expression = @/resourceFacility_template_proven
+	title = title
+        expression = $GLOBAL_resourceFacility_template_proven
     }
     
     // Rewards - pathfinder level, bonus for completing all RF1.2 pathfinders
@@ -59,13 +61,6 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Minmus
     
-    // Advanced Resource Processing Role template establishment
-    DATA
-    {
-        type = bool
-        advancedISRU_template_proven = true
-        persist = true
-    }
     
     // Objectives - Enhance existing ISRU facility
     PARAMETER
