--- a/Contracts/RFP/RFP1_3b_AdvancedSurfaceMobility.cfg
+++ b/Contracts/RFP/RFP1_3b_AdvancedSurfaceMobility.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = HabitatValidated
         type = Expression
-        expression = @/permanentHabitat_template_proven
+   	title = title
+        expression = $GLOBAL_permanentHabitat_template_proven
     }
     
     // Rewards - pathfinder level
@@ -51,13 +52,6 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-    // Advanced Rover Role template establishment
-    DATA
-    {
-        type = bool
-        advancedRover_template_proven = true
-        persist = true
-    }
     
     // Objectives - Test advanced rover systems
     PARAMETER
