--- a/Contracts/RFP/RFP1_3c_KEVDevelopment.cfg
+++ b/Contracts/RFP/RFP1_3c_KEVDevelopment.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = RoverValidated
         type = Expression
-        expression = @/advancedRover_template_proven
+	title = title
+        expression = $GLOBAL_advancedRover_template_proven
     }
     
     // Rewards - pathfinder level, bonus for completing all RF1.3 pathfinders
@@ -51,13 +52,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Mun
     
-    // KEV Role template establishment
-    DATA
-    {
-        type = bool
-        KEV_template_proven = true
-        persist = true
-    }
+
     
     // Track KEV vessel for reuse validation
     DATA
@@ -142,6 +137,8 @@ CONTRACT_TYPE
         {
             name = MunOrbit
             type = Orbit
+            minAltitude = 25000
+            maxAltitude = 100000
             targetBody = Mun
             title = Execute mission to Mun orbit
         }
@@ -167,6 +164,8 @@ CONTRACT_TYPE
         {
             name = MunOrbit2
             type = Orbit
+            minAltitude = 25000
+            maxAltitude = 100000
             targetBody = Mun
             title = Second mission to Mun orbit
         }
@@ -176,6 +175,8 @@ CONTRACT_TYPE
             name = ReturnToKerbin2
             type = Orbit
             targetBody = Kerbin
+            minAltitude = 100000
+            maxAltitude = 1000000
             title = Second return to Kerbin orbit
         }
     }
@@ -192,6 +193,8 @@ CONTRACT_TYPE
             name = MunOrbit3
             type = Orbit
             targetBody = Mun
+            minAltitude = 25000
+            maxAltitude = 100000
             title = Third mission to Mun orbit
         }
         
@@ -211,6 +214,8 @@ CONTRACT_TYPE
             name = FinalReturn
             type = Orbit
             targetBody = Kerbin
+            minAltitude = 100000
+            maxAltitude = 1000000
             title = Final return demonstrating proven reusability
         }
     }
