--- a/Contracts/RFP/RFP1_3d_ReusableTransferStage.cfg
+++ b/Contracts/RFP/RFP1_3d_ReusableTransferStage.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -39,7 +39,8 @@ CONTRACT_TYPE
     {
         name = KEVValidated
         type = Expression
-        expression = @/KEV_template_proven
+	title = title
+        expression = $GLOBAL_KEV_template_proven
     }
     
     // Rewards - pathfinder level, bonus for completing all RF1.3 pathfinders
@@ -51,21 +52,7 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Mun
     
-    // Reusable Transfer Stage Role template establishment
-    DATA
-    {
-        type = bool
-        reusableTransferStage_template_proven = true
-        persist = true
-    }
     
-    // Track transfer stage for reuse validation
-    DATA
-    {
-        type = Vessel
-        nuclearTransferStage = @TransferStageGroup/TransferStageVessel
-        requiredValue = false
-    }
     
     // Objectives - Deploy nuclear transfer stage and test with KEV
     PARAMETER
@@ -145,6 +132,7 @@ CONTRACT_TYPE
             name = MunTransfer
             type = Orbit
             targetBody = Mun
+            minAltitude = 20000
             title = Transfer to Mun orbit
         }
         
@@ -162,6 +150,7 @@ CONTRACT_TYPE
             name = ReturnToKerbin
             type = Orbit
             targetBody = Kerbin
+            maxPeA = 500000
             title = Return demonstrating reusable capability
         }
     }
