--- a/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
+++ b/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -43,132 +43,207 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-    // Communications Hub Role template establishment
-    DATA
-    {
-        type = bool
-        commHub_template_proven = true
-        persist = true
-    }
+//==========================================================================================
+PARAMETERS
+//==========================================================================================
     
     // Objectives - Deploy 3 relay satellites in different orbits
     PARAMETER
     {
-        name = RelaySat1Group
+        name = DeployAdvancedProbe
         type = VesselParameterGroup
-        title = Deploy Relay Satellite 1 (Low Orbit)
-        
-        define = Kerbin Relay 1
-        
+        title = Develop Flexible Satellite Constellation 
+	notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.
+    
+         
         PARAMETER
         {
-            name = OrbitKerbin1
-            type = Orbit
-            targetBody = Kerbin
-            minAltitude = 150000
-            maxAltitude = 300000
-            minInclination = 0
-            maxInclination = 15
-        }
-        
-        PARAMETER
-        {
+
             name = HasHighGainAntenna1
             type = PartValidation
             partModule = ModuleDataTransmitter
-            minCount = 1
+            title = Each Satellite has Comms
+            minCount = 3 
+	    hideChildren = true 
         }
-        
+
         PARAMETER
         {
-            name = HasPower1
+            name = DeployableSolarPanel
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
-            minCount = 1
+            minCount = 6
+            title = Each Satellite has 2 Solar Panels
+ 	    hideChildren = true
         }
-    }
-    
-    PARAMETER
-    {
-        name = RelaySat2Group
-        type = VesselParameterGroup
-        title = Deploy Relay Satellite 2 (Medium Orbit)
-        
-        define = Kerbin Relay 2
-        
+  
         PARAMETER
         {
-            name = OrbitKerbin2
+            name = LowKerbinOrbit
             type = Orbit
             targetBody = Kerbin
-            minAltitude = 500000
-            maxAltitude = 800000
-            minInclination = 30
-            maxInclination = 60
-        }
-        
-        PARAMETER
-        {
-            name = HasHighGainAntenna2
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasPower2
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
+            minAltitude = 150000
+	    hidden = true
+	}
     }
+
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat1Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 1 (Low Orbit)
     
+    define = Kerbin Relay 1
+    
+    // Hidden destination/situation parameter
     PARAMETER
     {
-        name = RelaySat3Group
-        type = VesselParameterGroup
-        title = Deploy Relay Satellite 3 (High Orbit)
-        
-        define = Kerbin Relay 3
-        
-        PARAMETER
-        {
-            name = OrbitKerbin3
-            type = Orbit
-            targetBody = Kerbin
-            minAltitude = 1000000
-            maxAltitude = 2000000
-            minInclination = 75
-            maxInclination = 105
-        }
-        
-        PARAMETER
-        {
-            name = HasHighGainAntenna3
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasPower3
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
+        name = ReachKerbin1
+        type = ReachState
+        targetBody = Kerbin
+        situation = ORBITING
+        minAltitude = 150000
+        maxAltitude = 300000
+        hidden = true  // Hides the destination/situation requirement
     }
     
+    // Visible altitude parameter
     PARAMETER
     {
-        name = CoverageTest
-        type = Timer
-        parameter = RelaySat1Group
-        parameter = RelaySat2Group  
-        parameter = RelaySat3Group
-        duration = 10d
-        title = Demonstrate continuous coverage for 10 days
-        notes = All three satellites must maintain their orbits and demonstrate coordinated operations.
+        name = OrbitAltitude1
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 150000
+        maxAltitude = 300000
+        title = Altitude: Between 150,000 m and 300,000 m
+ 	    hideChildren = true
+    }
+    
+    // Visible inclination parameter  
+    PARAMETER
+    {
+        name = OrbitInclination1
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 150000
+        minInclination = 0
+        maxInclination = 15
+        title = Inclination: Below 15.0°
+ 	    hideChildren = true
+    }
+}
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat2Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 2 (Medium Orbit)
+    
+    define = Kerbin Relay 2
+    
+    // Hidden destination/situation parameter
+    PARAMETER
+    {
+        name = ReachKerbin2
+        type = ReachState
+        targetBody = Kerbin
+        situation = ORBITING 
+        minAltitude = 500000
+        maxAltitude = 800000
+        hidden = true  // Hides the destination/situation requirement
+    }
+    
+    // Visible altitude parameter
+    PARAMETER
+    {
+        name = OrbitAltitude2
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 500000
+        maxAltitude = 800000
+        title = Altitude: Between 500,000 m and 800,000 m
+	hideChildren = true
+    }
+    
+    // Visible inclination parameter
+    PARAMETER
+    {
+        name = OrbitInclination2
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 500000
+        minInclination = 30
+        maxInclination = 60
+        title = Inclination: Between 30.0° and 60.0°
+	hideChildren = true
+    }
+}
+    
+//==========================================================================================
+
+PARAMETER
+{
+    name = RelaySat3Group
+    type = VesselParameterGroup
+    title = Deploy Relay Satellite 3 (High Orbit)
+        
+    define = Kerbin Relay 3
+        
+    PARAMETER
+    {
+        name = OrbitKerbin3
+        type = Orbit
+        targetBody = Kerbin
+        situation = ORBITING
+        minAltitude = 1000000
+        maxAltitude = 2000000
+        hidden = true  // Hides the destination/situation requirement
+    }
+    
+    // Visible altitude parameter
+    PARAMETER
+    {
+        name = OrbitAltitude3
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 1000000
+        maxAltitude = 2000000
+        title = Altitude: Between 1,000,000 m and 2,000,000 m
+        hideChildren = true
+    }
+    
+    // Visible inclination parameter
+    PARAMETER
+    {
+        name = OrbitInclination3
+        type = Orbit
+        targetBody = Kerbin
+        minAltitude = 1000000
+        minInclination = 75
+        maxInclination = 105
+        title = Inclination: Between 75.0° and 105.0°
+        hideChildren = true
+     }
+}
+    
+//==========================================================================================
+Behaviors
+//==========================================================================================
+
+    BEHAVIOUR
+    {
+	name = AutoAcceptMessage
+	type = Message
+	    
+	title = Mission Control
+	message = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Contract Award - Duna Investigation Initiative\n\nThe Science Council has reviewed all submitted proposals for the Duna investigation mission and is pleased to inform you that Lowne Aerospace has been selected as the primary contractor.\n\nYour company's innovative approach to deep space operations and proven track record in complex mission execution make you the ideal partner for this scientific endeavor. The initiative has been assigned the codename "RED FRONTIER" and classified as a Priority Alpha mission.\n\nBefore committing to expensive interplanetary deployment, we will conduct comprehensive technology validation through pathfinder missions in the Kerbin system. This approach ensures mission success while minimizing risk and cost overruns.
+	  
+	CONDITION
+	{
+	    condition = CONTRACT_ACCEPTED
+	}
     }
 }
