--- a/Contracts/RFP/RFP1_1d_OrbitalPlatform.cfg
+++ b/Contracts/RFP/RFP1_1d_OrbitalPlatform.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -41,7 +41,7 @@ CONTRACT_TYPE
     rewardReputation = 35.0
     
     // Target Body
-    targetBody = Kerbin
+    targetBody = Minmus
     
     // Science Station Role template establishment
     DATA
@@ -58,15 +58,15 @@ CONTRACT_TYPE
         type = VesselParameterGroup
         title = Deploy Prototype Science Station
         
-        define = Kerbin Science Station
+        define = Minmus Science Station
         
         PARAMETER
         {
             name = StationOrbit
             type = Orbit
-            targetBody = Kerbin
-            minAltitude = 300000
-            maxAltitude = 500000
+            targetBody = Minmus
+            minAltitude = 30000
+            maxAltitude = 100000
         }
         
         PARAMETER
@@ -108,6 +108,14 @@ CONTRACT_TYPE
             partModule = ModuleCommand
             minCount = 1
         }
+
+        PARAMETER
+        {
+            name = HasConverter
+            type = PartValidation
+            partModule = ModuleResourceConverter
+            minCount = 1
+        }
     }
     
     PARAMETER
@@ -122,7 +130,7 @@ CONTRACT_TYPE
         {
             name = DockWithStation
             type = Docking
-            vessel = Kerbin Science Station
+            vessel = Minmus Science Station
         }
         
         PARAMETER
@@ -142,22 +150,12 @@ CONTRACT_TYPE
         }
     }
     
-    PARAMETER
-    {
-        name = ExtendedOperations
-        type = Timer
-        parameter = StationDeployment
-        duration = 30d
-        title = Extended Operations Test - 30 days
-        notes = Station must maintain all systems operational for 30 days to validate autonomous capability.
-    }
     
     PARAMETER
     {
         name = ScienceProcessing
         type = CollectScience
-        targetBody = Kerbin
-        situation = InSpaceHigh
+        targetBody = Minmus
         recoveryMethod = Transmit
         title = Demonstrate Science Processing
         notes = Process and transmit science data to validate laboratory operations.
