--- a/Contracts/RFP/RFP1_3a_PolarResearchStation.cfg
+++ b/Contracts/RFP/RFP1_3a_PolarResearchStation.cfg
@@ -21,7 +21,7 @@ CONTRACT_TYPE
     deadline = 365
     cancellable = true
     declinable = true
-    autoAccept = false
+    autoAccept = true
     prestige = Trivial
     maxCompletions = 1
     maxSimultaneous = 1
@@ -31,7 +31,8 @@ CONTRACT_TYPE
     {
         name = RF1_2_Complete
         type = Expression
-        expression = (@/rf1_2a_completed && @/rf1_2b_completed && @/rf1_2c_completed)
+	title = title
+        expression = $GLOBAL_rf1_2c_completed
     }
     
     // Rewards - pathfinder level
@@ -43,13 +44,6 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-    // Permanent Habitat Role template establishment
-    DATA
-    {
-        type = bool
-        permanentHabitat_template_proven = true
-        persist = true
-    }
     
     // Objectives - Test permanent habitat systems
     PARAMETER
