--- a/RedFrontier.cfg
+++ b/RedFrontier.cfg
@@ -38,29 +38,205 @@ CONTRACT_TYPE
     maxExpiry = 0
     maxCompletions = 1
     maxSimultaneous = 0
-    autoAccept = false
+    autoAccept = true
     
     // Basic rewards - adjust as needed
-    advanceFunds = 10000
+    advanceFunds = 100000
     rewardFunds = 25000
     rewardReputation = 10
     
-    // Need at least one parameter
-    PARAMETER
-        {
-            name = RFRequirement
-            type = All
-            title = Complete Mission Progress
-            hideChildren = true
-            completeInSequence = true
-            optional = false
+// =============================================================================
+    REQUIREMENT
+    {
+        name = CompleteContract
+        type = CompleteContract
+        contractType = RF0_2_Signals
+    }
 
-	  REQUIREMENT
-	  {
-	     name = CompleteContract
-	     type = CompleteContract
-	     contractType = RF1_1d_IkeResourceOps
-	   }
+// =============================================================================
+// GLOBAL MISSION TRACKING
+// =============================================================================
+      
+    PARAMETER
+    {
+        name = StatusDisplay
+        type = All
+        title = @/status_message
+        completeInSequence = true
+        optional = true
+    }
+
+    PARAMETER
+    {
+        name = RF1_1_PathfinderPhase
+        type = All
+        title = RF1.1 Pathfinder Development - Technology Validation
+        completeInSequence = true
+        optional = false
+        
+        PARAMETER
+        {
+            name = PathfinderComms
+            type = All
+            title = Communications Technology (RFP1.1a)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RFP1_1a_InterplanetaryComms
+            }
         }
+        
+        PARAMETER
+        {
+            name = PathfinderLanding
+            type = All
+            title = Precision Landing Technology (RFP1.1b)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RFP1_1b_PrecisionLanding
+            }
+        }
+        
+        PARAMETER
+        {
+            name = PathfinderReusable
+            type = All
+            title = Reusable Launch Technology (RFP1.1c)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RFP1_1c_ReusableLaunch
+            }
+        }
+        
+        PARAMETER
+        {
+            name = PathfinderOrbital
+            type = All
+            title = Orbital Platform Technology (RFP1.1d)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RFP1_1d_OrbitalPlatform
+            }
+        }
+        
+        PARAMETER
+        {
+            name = PathfinderISRU
+            type = All
+            title = Resource Extraction Technology (RFP1.1e)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RFP1_1e_ResourceExtraction
+            }
+        }
+    }
+    
+    PARAMETER
+    {
+        name = RF1_1_DeploymentPhase
+        type = All
+        title = RF1.1 Deployment Operations - Duna System Establishment
+        completeInSequence = true
+        optional = false
+        
+        PARAMETER
+        {
+            name = DeploymentOrbital
+            type = All
+            title = Duna Orbital Operations (RF1.1a)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RF1_1a_DunaOrbitalOps
+            }
+        }
+        
+        PARAMETER
+        {
+            name = DeploymentComms
+            type = All
+            title = Duna Communications Network (RF1.1b)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RF1_1b_DunaCommsNetwork
+            }
+        }
+        
+        PARAMETER
+        {
+            name = DeploymentSurface
+            type = All
+            title = Duna Surface Survey (RF1.1c)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RF1_1c_DunaSurfaceSurvey
+            }
+        }
+        
+        PARAMETER
+        {
+            name = DeploymentISRU
+            type = All
+            title = Ike Resource Operations (RF1.1d)
+            // hideChildren = true
+            optional = false
+            
+            REQUIREMENT
+            {
+                name = CompleteContract
+                type = CompleteContract
+                contractType = RF1_1d_IkeResourceOps
+            }
+        }
+    }
+    
+    PARAMETER
+    {
+        name = RF1_1_Complete
+        type = All
+        title = RF1.1 Mission Complete - Advance to RF1.2
+        // hideChildren = true
+        completeInSequence = true
+        optional = false
+
+    }
 
 }
